tests/type-reconstruction/ill-typed/pairs/pairs-4.stella
language core;

extend with #pairs, #type-reconstruction;

fn main(x : auto) -> Nat {
  return
    (fn(x : auto) { return { { { x, x }, { x, x } }, { { x, Nat::iszero(x) }, { x, x } } } })(0).2.1
}
